--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formula E</title>
+    <link rel="stylesheet" href="./src/css/estilo.css">
 </head>
 
 <body>
 
 </body>
-
+<script src="./src/js/script.js"></script>
 </html>
