--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <title>Formula E</title>
     <link rel="stylesheet" href="./src/css/estilo.css">
 </head>
-
 <body>
+    <header>
+        <a href="./index.html">
+            <img src="logo" alt="">
+        </a>
+        <nav>
+        <a href="">CADASTRE-SE</a>
+        <a href="">CORRIDAS</a>
+        </nav>
+    </header>
 
+    
 </body>
 <script src="./src/js/script.js"></script>
 </html>
