--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
 
-    
+    <footer>@2024- Todos direitos reservados à Data Sphere Solutions</footer>
 </body>
 <script src="./src/js/script.js"></script>
 </html>
