criando botões e colocando id

--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 <body>
     <header>
         <a href="./index.html">
-            <img src="logo" alt="">
+            <img src="logo" alt="" id="logo">
         </a>
         <nav>
-        <a href="">CADASTRE-SE</a>
-        <a href="">CORRIDAS</a>
+            <ul>
+                <li>
+                    <a href="">CADASTRE-SE</a>
+                </li>
+                <li>
+                    <a href="">CORRIDAS</a>
+                </li>
+            </ul>
         </nav>
     </header>
+    <button id="botão1">mamaeu</button>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
 
+    <button id="botão2">mamaeyo</button>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
     <footer>@2024- Todos direitos reservados à Data Sphere Solutions</footer>
 </body>
 <script src="./src/js/script.js"></script>
