começando a mexer no css dos botões

--- a/index.html
+++ b/index.html
@@ -32,12 +32,17 @@
 <section id="bcorridas">
     <button id="botão1">mamaeu</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
+    <img src="./src/img/carro.png" alt="">
 </section>
-<section id="bfodase">
+<section id="bpilotos">
     <button id="botão2">mamaeyo</button>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam suscipit dignissimos, minus sapiente eum doloribus, sint quod blanditiis asperiores quam nulla dolores sit, beatae ipsam veritatis odio rem? Molestiae, aspernatur?</p>
 </section>
-    <footer>@2024- Todos direitos reservados à Data Sphere Solutions</footer>
+
+<footer><h4>@2024- Todos direitos reservados à Data Sphere Solutions e Mahindra
+</h4>
+</footer>
+
 </body>
 <script src="./src/js/script.js"></script>
 </html>
